# tidysic

./: .gitignore  CONTRIBUTING.md  README.md  cli_tool  pyproject.toml  requirements.txt  ui_tool
.github/workflows/: python-app.yml
src/: __argparse__.py  __logger__.py  __os_utils__.py  tidysic.py  tidysic_gui.py
test/: __init__.py  test_algorithm.py  test_example.py
tests/: test_audio_file.py  test_directory.py  test_formatted_string.py  test_structure_parser.py  test_tidysic.py  test_tree.py
tidysic/: __init__.py  algorithms.py  argparser.py  audio_file.py  exceptions.py  formatted_string.py  logger.py  main.py  ordering.py  organizer.py  os_utils.py  parser.py  tag.py  tag_type.py  tidysic.py
tidysic/file/: __init__.py  audio_file.py  clutter_file.py  taggable.py  tagged_file.py
tidysic/gui/: __init__.py  folder_select_dialog.py  main_window.py  tidysic_gui.py
tidysic/gui/dialogs/: __init__.py  folder_select.py  ordering_select.py  struture_select.py
tidysic/gui/widgets/: __init__.py  files_visualizer.py  ordering_level_select.py  structure_level_select.py  tags_editor.py  tree_editor.py
tidysic/parser/: audio_file.py  tree.py
tidysic/settings/: .tidysic.default  __init__.py  formatted_string.py  parser.py  structure.py
